Add functionality for unAuthorized user to fetch sample data